getBookmarkedArticlesを実装
